# ector

./: .gitignore  .kateproject.build  .luarc.json  CMakeLists.txt  CMakePresets.json  LICENSE  log.valgrind
.github/workflows/: cmake-multi-platform.yml
assets/core/shaders/: builtin.glsl  cs_build_clusters.glsl  cs_cull_lights.glsl
assets/models/: barrel.ebmf  bolt.ebmf  bush.ebmf  eye_torch.ebmf  floor_torch.ebmf  pball_11.ebmf  rocks.ebmf  toybox.ebmf
assets/scripts/: ector.d.lua  scripting_sample.lua  scripting_sample_init.lua  scripting_sample_update.lua
cmake/: add_module.cmake  append_source.cmake
examples/: CMakeLists.txt  cube_model.h  lighting_test.c  particle_shader_code.h  sample_app.c  sample_app_3d.c  scripting_sample.c
inc/: default_lightmanager.h  default_modules.h  ect_math.h  ect_types.h  engine.h  graphics.h  image.h  mesh.h  object.h  physics.h  renderer.h  rendering.h  scripting.h
inc/core/: engine.h  keymap.h  renderer.h
inc/util/: array.h  extra_types.h  files.h  handle.h  keymap.h  math.h  matrix.h  quaternion.h  resource.h  types.h  vec2.h  vec3.h  vec4.h
src/: CMakeLists.txt  mod_rendering.h  module_glue.h  object.c
src/core/: engine.c  engine_i.h  renderer.c  renderer_i.h
src/engine/: CMakeLists.txt  ector_icon.h  input.c  internal.h  module.c  rendering.c
src/graphics/: CMakeLists.txt  buffers.c  geometries.c  internal.h  module.c  shaders.c  storage_buffers.c  textures.c
src/image/: CMakeLists.txt  module.c
src/mesh/: CMakeLists.txt  internal.h  module.c  procedural.c  procgen.c
src/module/: CMakeLists.txt  glue.c  glue.h
src/physics/: CMakeLists.txt  epa.c  gjk.c  internal.h  module.c
src/renderer/: CMakeLists.txt  default_shaders.h  drawables.c  internal.h  module.c  shaders.h  surfaces.c
src/renderer/default_lightmanager/: internal.h  lightmanager.c
src/rendering/: internal.h
src/scripting/: CMakeLists.txt  internal.h  lua_engine.c  lua_engine.h  lua_input.h  lua_input_consts.h  lua_math.h  module.c
src/util/: CMakeLists.txt  array.c  files.c  resource.c
tools/: CMakeLists.txt  lighting_test.c  sample_app.c
